new download controller; manually edit videos;

--- a/vtbarchiver/templates/channels/single_channel.html
+++ b/vtbarchiver/templates/channels/single_channel.html
@@ -53,7 +53,7 @@
                 </li>
                 {% if g.user %}
                 <li class="nav-item">
-                  <a class="nav-link" data-bs-toggle="tab" href="#channel-mgn">Management</a>
+                  <a id="channel-mgn-tab" class="nav-link" data-bs-toggle="tab" href="#channel-mgn">Management</a>
                 </li>
                 {% endif %}
             </ul>
