--- a/vtbarchiver/static/style.css
+++ b/vtbarchiver/static/style.css
@@ -77,6 +77,18 @@ input.form-control::placeholder {
     font-size: 0.9em;
 }
 
+.setting-stamp {
+    position: absolute;
+    left: 0%;
+    bottom: 0%;
+    padding-left: 0.2em;
+    padding-bottom: 0.1em;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 0.9em;
+}
+
 .stats-filter:focus {
     box-shadow: none;
 }
