--- a/vtbarchiver/templates/videos/single_video.html
+++ b/vtbarchiver/templates/videos/single_video.html
@@ -194,16 +194,17 @@
 
                 <div class="modal-body">
                     <div class="mx-auto" style="width: 90%;">
+                        <div id="add-talent-warning"></div>
                         <div id="talent-edit" class="row">
                             <div class="col-sm-10">
                                 <input name="talent_list" value="{{ participators }}"/>
                             </div>
                             <div class="col-sm-2">
-                                <button type="submit" class="btn btn-outline-secondary" form="parsed-talent-form">Apply</button>
+                                <button id="submit-talent-btn" type="button" class="btn btn-outline-secondary">Apply</button>
                             </div>
                         </div>
                         <div class="d-none">
-                            <form id="parsed-talent-form" action="{{ url_for('videos.add_talent', video_id=video_info['video_id']) }}" method="post">
+                            <form id="parsed-talent-form">
                                 <input type="hidden" id="parsed-talents" name="talents" />
                             </form>
                         </div>
@@ -223,16 +224,17 @@
 
                 <div class="modal-body">
                     <div class="mx-auto" style="width: 90%;">
-                        <div id="talent-edit" class="row">
+                        <div id="add-type-warning"></div>
+                        <div id="stream-type-edit" class="row">
                             <div class="col-sm-10">
                                 <input name="stream_type" value="{{ stream_type }}"/>
                             </div>
                             <div class="col-sm-2">
-                                <button type="submit" class="btn btn-outline-secondary" form="parsed-stream-form">Apply</button>
+                                <button id="submit-type-btn" type="button" class="btn btn-outline-secondary" form="parsed-stream-form">Apply</button>
                             </div>
                         </div>
                         <div class="d-none">
-                            <form id="parsed-stream-form" action="{{ url_for('videos.add_stream_type', video_id=video_info['video_id']) }}" method="post">
+                            <form id="parsed-stream-form">
                                 <input type="hidden" id="parsed-stream" name="stream_type" />
                             </form>
                         </div>
