--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,2 +1,12 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="container main-body">
+  <div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-sm-2"></div>
+  </div>
+</div>
+
+
