--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -1,16 +1,21 @@
-<div *ngIf="submitted && loginResult === 'failed'">
-  <p>Login failed. Please try again. </p>
+<h3>Login</h3>
+<div class="border rounded-2 bg-light login-region">
+  <div *ngIf="submitted && loginResult === 'failed'">
+    <p>Login failed. Please try again. </p>
+  </div>
+  <form #loginForm="ngForm">
+    <div class="form-group mt-3">
+      <label for="userName" class="form-label">Username</label>
+      <input type="text" class="form-control" id="userName" required [(ngModel)]="loginInfo.userName" required name="userName" #username="ngModel">
+    </div>
+  
+    <div class="form-group mt-3">
+      <label for="password" class="form-label">Password</label>
+      <input type="password"  class="form-control" id="password" [(ngModel)]="loginInfo.password" required name="password" #password="ngModel">
+    </div>
+  
+    <div class="my-3 text-end">
+      <button type="button" class="btn btn-success" [disabled]="!loginForm.valid" (click)="login(loginInfo)">Login</button>
+    </div>
+  </form>
 </div>
-<form #loginForm="ngForm">
-  <div class="form-group">
-    <label for="userName">Username</label>
-    <input type="text" class="form-control" id="userName" required [(ngModel)]="loginInfo.userName" required name="userName" #username="ngModel">
-  </div>
-
-  <div class="form-group">
-    <label for="password">password</label>
-    <input type="password"  class="form-control" id="password" [(ngModel)]="loginInfo.password" required name="password" #password="ngModel">
-  </div>
-
-  <button type="button" class="btn btn-primary" [disabled]="!loginForm.valid" (click)="login(loginInfo)">Login</button>
-</form>
