--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -1,20 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home">VArchiver</a>
+<nav class="navbar navbar-expand-md fixed-top navbar-light py-0">
+  <div class="container-fluid px-0 py-2">
+    <a class="navbar-brand mx-3" routerLink="/home">VArchiver</a>
 
-    <button class="navbar-toggler" type="button" (click)="toggle_navbar()">&#9776;</button>
+    <button class="navbar-toggler me-2" type="button" (click)="toggle_navbar()">&#9776;</button>
   
 
-    <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse bg-light">
+    <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" (click)="isMenuCollapsed = true">Channels</a>
+        <li class="nav-item mx-2">
+          <a class="nav-link" (click)="isMenuCollapsed = true" routerLink="channels">Channels</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mx-2">
           <a class="nav-link" (click)="isMenuCollapsed = true">Videos</a>
         </li>
-        <li *ngIf="userInfo.userName" class="nav-item">
+        <li *ngIf="authService.user.userName" class="nav-item mx-2">
           <a class="nav-link" (click)="isMenuCollapsed = true">Management</a>
+        </li>
+        <li *ngIf="authService.user.userName" class="nav-item mx-2">
+          <a class="nav-link" (click)="isMenuCollapsed = true; logOut()">Logout</a>
         </li>
       </ul>
     </div>
