--- a/web/src/app/single-channel/single-channel.component.html
+++ b/web/src/app/single-channel/single-channel.component.html
@@ -41,6 +41,15 @@
           </div>
         </ng-template>
       </li>
+      <!--management-->
+      <li [ngbNavItem]="'management'">
+        <a ngbNavLink>Management</a>
+        <ng-template ngbNavContent>
+          <div class="mb-5">
+            <app-channel-mgn [channelDetail]="channelDetail" (requestReload)="onRequestReload()"></app-channel-mgn>
+          </div>
+        </ng-template>
+      </li>
     </ul>
     <div [ngbNavOutlet]="nav" class="mt-2"></div>
   <div class="col-sm-1"></div>
