--- a/web/src/app/video-list/video-list.component.html
+++ b/web/src/app/video-list/video-list.component.html
@@ -30,7 +30,7 @@
           </div>
           <div class="align-self-start flex-grow-1" style="text-align: right;">
             <span class="text-secondary" style="font-size: 0.8em;">{{video.uploadIndex}}</span><br />
-            <span *ngIf="video.archived"><i class="iconfont icon-archive text-success"></i></span>
+            <span *ngIf="video.localPath"><i class="iconfont icon-archive text-success"></i></span>
           </div>
         </div>
       </div>
