--- a/web/src/app/single-video/single-video.component.html
+++ b/web/src/app/single-video/single-video.component.html
@@ -44,7 +44,7 @@
       <ng-container *ngIf="videoDetail.localPath; then playBtn; else downloadBtn"></ng-container>
       <ng-template #playBtn>
         <div class="mt-3" style="text-align: center;">
-          <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#archived-video-modal"><i class="iconfont icon-play"></i> Play archived</button>
+          <button type="button" class="btn btn-outline-secondary" (click)="openModal(videoModal)"><i class="iconfont icon-play"></i> Play archived</button>
         </div>
       </ng-template>
       <ng-template #downloadBtn>
@@ -153,6 +153,22 @@
       </div>
       <button type="button" class="btn btn-danger" (click)="onDeleteVideo()">Delete Video</button>
     </div>
-  
   </div>
 </div>
+
+
+<!--video modal--> 
+<ng-template #videoModal let-modal>
+  <div class="modal-header">
+    <div class="player-title"><h4>{{videoDetail.title}}</h4></div>
+    <button type="button" class="btn-close" (click)="modal.dismiss()"></button>
+  </div>
+
+  <div class="modal-body">
+      <div class="mx-auto" style="width: 90%;">
+          <video #videoPlayer style="width: 100%;" controls>
+              <source [src]="'/static/'+videoUrlWithTime">
+          </video>
+      </div>
+  </div>
+</ng-template>
