--- a/web/src/app/app.component.css
+++ b/web/src/app/app.component.css
@@ -3,3 +3,16 @@
 .main-body {
     margin-top: 4em;
 }
+
+.tagify {
+    --tag-pad: 0 0.5rem;  
+    line-height: 1.5;
+}
+  
+.tagify__input:empty::before {
+line-height: inherit;
+}
+
+.tagify.form-control {
+height: unset;
+}
