--- a/web/src/app/single-channel/single-channel.component.html
+++ b/web/src/app/single-channel/single-channel.component.html
@@ -29,7 +29,7 @@
       <li [ngbNavItem]="'videos'">
         <a ngbNavLink>Videos</a>
         <ng-template ngbNavContent>
-          <app-video-list></app-video-list>
+          <app-video-list queryType="channel"></app-video-list>
         </ng-template>
       </li>
       <!--stats-->
