--- a/web/src/app/video-list/video-list.component.html
+++ b/web/src/app/video-list/video-list.component.html
@@ -1,20 +1,25 @@
 <div>
-  <div class="text-end">
-    <div ngbDropdown id="jump-page-control" placement="bottom-end">
-      <button class="btn text-secondary" id="dropdownBasic1" ngbDropdownToggle>Jump to</button>
-      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-        <div class="d-flex">
-          <div class="m-2">
-            <input type="number" class="form-control" [(ngModel)]="jumpToPage">
-          </div>
-          <div class="align-self-center me-2">
-            <button class="btn btn-outline-secondary" (click)="jumpTo()">Go</button>
+  <div class="row">
+    <div class="col-sm-9 col-lg-10 text-secondary align-self-center" style="font-size: 0.8em;">
+      Total {{videosOnPage.videoNum}}, showing {{(page-1)*pageSize+1}} to {{page*pageSize}}
+    </div>
+    <div class="col-sm-3 col-lg-2 text-end pe-0">
+      <div ngbDropdown id="jump-page-control" placement="bottom-end">
+        <button class="btn text-secondary" id="dropdownBasic1" ngbDropdownToggle>Jump to</button>
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <div class="d-flex">
+            <div class="m-2">
+              <input type="number" class="form-control" [(ngModel)]="jumpToPage">
+            </div>
+            <div class="align-self-center me-2">
+              <button class="btn btn-outline-secondary" (click)="jumpTo()">Go</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div *ngFor="let video of channelVideos.videoList" class="bg-light shadow-sm mx-auto my-2 border rounded-2" style="cursor: pointer;" (click)="goToVideo(video.videoId)">
+  <div *ngFor="let video of videosOnPage.videoList" class="bg-light shadow-sm mx-auto my-2 border rounded-2" style="cursor: pointer;" (click)="goToVideo(video.videoId)">
     <div class="row mx-0">
       <div class="col-sm-3 border-end px-0">
         <div class="mx-auto d-flex" style="text-align: center; align-items: center; height: 100%;">
@@ -29,7 +34,7 @@
             <div class="my-2 text-secondary video-duration" style="font-size: 0.9em;">{{video.duration}}</div>
           </div>
           <div class="align-self-start flex-grow-1" style="text-align: right;">
-            <span class="text-secondary" style="font-size: 0.8em;">{{video.uploadIndex}}</span><br />
+            <span *ngIf="queryType === 'channel'" class="text-secondary" style="font-size: 0.8em;">{{video.uploadIndex}}</span><br />
             <span *ngIf="video.localPath"><i class="iconfont icon-archive text-success"></i></span>
           </div>
         </div>
@@ -37,5 +42,5 @@
     </div>
   </div>
 
-  <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="channelVideos.videoNum" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" [ellipses]="false" class="d-flex justify-content-center mt-4"></ngb-pagination>
+  <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="videosOnPage.videoNum" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" [ellipses]="false" class="d-flex justify-content-center mt-4"></ngb-pagination>
 </div>
