setting page finished;

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link" (click)="isMenuCollapsed = true" routerLink="videos">Videos</a>
         </li>
         <li *ngIf="authService.user.userName" class="nav-item mx-2">
-          <a class="nav-link" (click)="isMenuCollapsed = true">Management</a>
+          <a class="nav-link" (click)="isMenuCollapsed = true" routerLink="settings">Management</a>
         </li>
         <li *ngIf="authService.user.userName" class="nav-item mx-2">
           <a class="nav-link" (click)="isMenuCollapsed = true; logOut()">Logout</a>
