readme and about page

--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,1 +1,29 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-sm-1"></div>
+
+    <div class="col-sm-10">
+        <h2>About</h2>
+        <div class="mt-2" id="about">
+            <hr class="mb-4"/>
+            <h4 class="mb-3">This Site</h4>
+            <p>
+                This is an archive station for Suisei Hoshimachi, a virtual YouTuber famous for her beautiful voice and inspirational experience. The target of this site is to prevent her videos from being deleted on YouTube due to copyright claims or any other unpredictable circumstances. The idea to build this site is inspired by Mr. Aozaki, an admirable Hoshiyomi (fan of Miss Hoshimachi). 
+            </p>
+            <p>
+                Please do not advertise this site or use spider to massively download videos, thank you very much for your coorperation. 
+            </p>
+            <hr class="my-4"/>
+            <h4 class="mb-3">This Project</h4>
+            <p>
+                This site is built with <a href="https://flask.palletsprojects.com/en/2.0.x/">Flask</a>/<a href="https://angular.io/">Angular</a>/<a href="https://getbootstrap.com/">Bootstrap</a>. The site also has a timed video fetcher based on <a href="https://github.com/yt-dlp/yt-dlp">yt-dlp</a>. For more information, please visit <a href="https://github.com/elfofmaxwell/another-archiver-web">GitHub<i class="iconfont icon-GitHub"></i></a>. 
+            </p>
+            <hr class="my-4"/>
+            <h4 class="mb-3">Problems</h4>
+            <p>
+                Now searching tag suggestions might not show immediately after input. Please add a space to trigger the suggestion. 
+            </p>
+        </div>
+    </div>
+
+    <div class="col-sm-1"></div>
+</div>
