--- a/web/src/app/video-list/video-list.component.html
+++ b/web/src/app/video-list/video-list.component.html
@@ -42,5 +42,18 @@
     </div>
   </div>
 
-  <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="videosOnPage.videoNum" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" [ellipses]="false" class="d-flex justify-content-center mt-4"></ngb-pagination>
-</div>
+  <div class="d-flex justify-content-end mt-2 mb-5" id="pagination">
+    <div class="align-self-center">
+      <button type="button" class="btn p-0 text-secondary" [disabled]="page===1" (click)="page = page-1">
+        <i class="iconfont icon-angle-left"></i>
+      </button>
+    </div>
+    <div class="align-self-center text-secondary">
+      &nbsp;{{page}}&nbsp;
+    </div>
+    <div class="align-self-center">
+      <button type="button" class="btn p-0 text-secondary" [disabled]="page===pageNum" (click)="page = page+1">
+        <i class="iconfont icon-angle-right"></i>
+      </button>
+    </div>
+  </div>
