--- a/web/src/app/channels/channels.component.html
+++ b/web/src/app/channels/channels.component.html
@@ -3,7 +3,7 @@
   <div class="col-sm-10">
     <div class="d-flex">
       <div><h2>Channels</h2></div>
-      <div *ngIf="authService.user.userName" class="flex-grow-1 align-self-center" style="text-align: right;"><button type="button" class="btn btn-primary" (click)="fetchAllChannels()">Fetch all</button></div>
+      <div *ngIf="authService.user.userName" class="flex-grow-1 align-self-center" style="text-align: right;"><button type="button" class="btn btn-primary" (click)="fetchAllChannels()"><span [hidden]="!fetchingChannel" class="spinner-border spinner-border-sm"></span> Fetch all</button></div>
     </div>
     <div class="mt-3">
       <ngb-alert *ngIf="fetchFailedChannels.length" type="warning" (closed)="fetchFailedChannels = []; fetchFailedChannelIds='';">Some channels are not successfully fetched: {{fetchFailedChannelIds}}</ngb-alert>
