--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container main-body">
-  <div class="row">
+  <div class="row mb-5">
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
       <router-outlet></router-outlet>
