better border labels; try to get new duration for zero-duration videos

--- a/web/src/app/single-video/single-video.component.css
+++ b/web/src/app/single-video/single-video.component.css
@@ -43,6 +43,7 @@
     transform: translate(5%, -50%); 
     background-color: var(--bs-white); 
     padding: 0 0.5em;
+    max-width: 80%;
 }
 
 .setting-block {
