--- a/web/src/app/channel-mgn/channel-mgn.component.css
+++ b/web/src/app/channel-mgn/channel-mgn.component.css
@@ -7,6 +7,7 @@
   transform: translate(5%, -50%); 
   background-color: var(--bs-white); 
   padding: 0 0.5em;
+  max-width: 80%;
 }
 
 .setting-block {
